<resources>

    <!--OTROS-->
    <string name="app_name" translatable="false">Compras Familiares</string>
    <string name="menu_products_close_item">Cerrar sesion</string>
    <string name="menu_groups_close_item">Cerrar sesión</string>
    <string name="menu_products_go_groups_item">Ir a Grupos</string>
    <string name="camera_denegate">No hay permisos para la camara</string>error_time_out
    <string name="error_time_out">Error en el servicio, por favor compruebe su conexión</string>
    <string name="error_time_out_title">Error de conexión</string>

    <!--LOGIN-->
    <string name="login_title">LOG-IN</string>
    <string name="login_register_btn_text">REGISTRARSE</string>
    <string name="login_error_user">El email no es valido</string>
    <string name="login_background_animation" translatable="false">https://assets9.lottiefiles.com/packages/lf20_boJRmE.json</string>
    <string name="login_loading_animation" translatable="false">https://assets1.lottiefiles.com/packages/lf20_qogkaqmb.json</string>
    <string name="login_username_text">Email</string>
    <string name="login_password_text">Contraseña</string>
    <string name="login_login_btn_text">LOG-IN</string>
    <string name="login_error_password">La contraseña debe contener entre 8/16 caracteres, al menos un número y una letra </string>
    <string name="error_login">Error en el login: %s</string>
    <string name="error_login_incorrect_paswword">Usuario o contraseña incorrectos.</string>
    <string name="error_login_incorrect_user">Usuario o contraseña incorrectos.</string>
    <string name="error_users_empty">No hay usuarios registrados</string>

    <!--REGISTER-->
    <string name="register_title">REGISTRARSE</string>
    <string name="register_input_layout_email_text">Email</string>
    <string name="register_input_layout_pass_text">Contraseña</string>
    <string name="register_input_layout_name_text">Nombre</string>
    <string name="register_input_layout_surName_text">Apellidos</string>
    <string name="register_input_layout_edad_text">Edad</string>
    <string name="register_error_user">El email no es valido</string>
    <string name="register_registred_user">Usuario registrado: %s</string>
    <string name="register_error_pass">La contraseña debe contener entre 8/16 caracteres, al menos un número y una letra</string>
    <string name="register_error_name">El nombre no es valido</string>
    <string name="error_register">Error al registrarse: %s</string>
    <string name="error_register_repeat_user">El usuario ya esta registrado</string>

    <!--GROUPS-->
    <string name="groups_title">GRUPOS</string>
    <string name="group_toolbar_title_default">Grupos</string>
    <string name="group_toolbar_title">Bienvenido %1s %2s</string>
    <string name="selected_group">Hemos seleccionado el grupo %s</string>
    <string name="groups_create_group">Grupo creado: %s</string>
    <string name="groups_delete_group">El grupo %s ha sido borrado</string>
    <string name="item_group_enter_btn">ENTRAR</string>
    <string name="item_group_create_user">Grupo creado por %s</string>
    <string name="create_group_title">CREAR GRUPO</string>
    <string name="create_group_input_layout_name">Nombre del grupo</string>
    <string name="groups_fab_add_content_desc">Crear un grupo</string>
    <string name="create_group_input_layout_description">Descripcion del grupo</string>
    <string name="error_create_group">Error al crear el grupo: %s</string>
    <string name="register_error_description">Descripcion no valida</string>
    <string name="error_groups_repeat_name">Ya existe un grupo con ese nombre</string>
    <string name="error_groups_empty">No estas en ningun grupo</string>
    <string name="error_group_not_found">El grupo no existe</string>
    <string name="create_group_image_description">Imagen del grupo</string>
    <string name="create_group_input_layout_list_users_text">Lista de usuarios</string>
    <string name="create_group_user_add_btn">Añadir Usuarios</string>
    <string name="error_groups">Error en el grupo: %s</string>

    <!--LISTA COMPRA-->
    <string name="lista_compra_title">LISTA COMPRA</string>
    <string name="lista_compra_toolbar_title_default">Lista de la compra</string>
    <string name="lista_compra_toolbar_title">Bienvenido a %1s</string>
    <string name="lista_compra_all_btn">COMPRAR TODO</string>
    <string name="lista_compra_add_btn">PRODUCTO DETALLADO</string>
    <string name="lista_compra_small_add_btn">PRODUCTO RAPIDO</string>
    <string name="product_amount">Cantidad: %d</string>
    <string name="product_user">Añadido por: %s</string>
    <string name="products_bought">El producto %s ha sido comprado</string>
    <string name="error_product">Error en productos: %s</string>

    <!--LISTA COMPRA ADD-->
    <string name="lista_compra_add_title">PRODUCTO</string>
    <string name="error_products_repeat_name">Ya existe un producto con ese nombre</string>
    <string name="error_products_empty">No hay productos en la lista</string>
    <string name="lista_compra_add_input_layout_name">Nombre del producto</string>
    <string name="lista_compra_add_input_layout_description">Descripción del producto</string>
    <string name="lista_compra_add_input_layout_amount">Cantidad</string>
    <string name="lista_compra_add_image_description">Imagen del producto</string>
    <string name="error_create_product">Error al añadir el producto: %s</string>
    <string name="products_create">Producto añadido: %s</string>
    <string name="item_product_enter_btn">COMPRAR</string>
    <string name="error_products_not_found">El producto no existe</string>
    <string name="notification_longer_text">Texto demasiado largo</string>

    <!--USERSDIALOG-->
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="pick_users">Escoge los usuarios</string>
    <string name="error_selected_user_list_empty">No se ha seleccionado ningun usuario</string>
    <string name="TagUserDialog" translatable="false">usersDialog</string>

    <!--BTN-->
    <string name="save_btn">GUARDAR</string>
    <string name="exit_btn">SALIR</string>
    <string name="delete_btn">BORRAR</string>
    <string name="capture_btn">Foto</string>
    <string name="choose_btn">Galeria</string>

    <!--Inputs-->
    <string name="suffix_text_password">8/16</string>

</resources>