<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="es.adrianfg.comprasfamiliares.presentation.features.login.vm.LoginViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_clipToCompositionBounds="true"
            app:lottie_loop="true"
            app:lottie_url="@string/login_background_animation"
            tools:ignore="ImageContrastCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_content_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.loading?View.GONE:View.VISIBLE}">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/titles_vertical_margin"
                android:gravity="center"
                android:text="@string/login_title"
                android:textAppearance="?comprasH4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_layout_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_view_horizontal_margin"
                android:gravity="center"
                android:hint="@string/login_username_text"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_input_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="254"
                    android:text="@={viewModel.userName}"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_layout_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_view_horizontal_margin"
                app:suffixText="@string/suffix_text_password"
                app:suffixTextAppearance="?comprasBody16"
                android:hint="@string/login_password_text"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_input_layout_user_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:text="@={viewModel.password}"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_user_btn"
                style="?comprasButton_filled_round"
                android:layout_marginHorizontal="@dimen/filled_button_horizontal_margin"
                android:layout_marginVertical="@dimen/filled_button_vertical_margin"
                android:enabled="@{viewModel.enableBtn}"
                android:onClick="@{()-> viewModel.logIn()}"
                android:text="@string/login_login_btn_text"
                app:icon="@drawable/ic_login"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toTopOf="@+id/register_user_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_user_btn"
                style="?comprasButton_filled_round"
                android:layout_marginHorizontal="@dimen/filled_button_horizontal_margin"
                android:layout_marginVertical="@dimen/filled_button_vertical_margin"
                android:text="@string/login_register_btn_text"
                app:icon="@drawable/ic_register"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.loading?View.VISIBLE:View.GONE}"
            app:layout_anchor="@+id/lottieAnimationView"
            app:layout_anchorGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="@string/login_loading_animation"
            tools:ignore="ImageContrastCheck" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>