<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="es.adrianfg.comprasfamiliares.presentation.features.listaCompra.vm.ListaCompraAddViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lista_compra_add_content_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.loading?View.GONE:View.VISIBLE}">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lista_compra_add_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/titles_vertical_margin"
                android:gravity="center"
                android:text="@string/lista_compra_add_title"
                android:textAppearance="?comprasH4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lista_compra_add_choose_btn"
                style="?comprasButton_filled_round"
                android:layout_marginHorizontal="8dp"
                android:backgroundTint="@color/rippleColor"
                android:text="@string/choose_btn"
                app:icon="@drawable/ic_galery"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="@+id/lista_compra_add_image"
                app:layout_constraintEnd_toEndOf="@+id/lista_compra_add_input_layout_description"
                app:layout_constraintStart_toEndOf="@+id/lista_compra_add_image"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lista_compra_add_input_layout_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_view_horizontal_margin"
                android:layout_marginTop="@dimen/titles_vertical_margin"
                android:gravity="center"
                android:hint="@string/lista_compra_add_input_layout_name"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lista_compra_add_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lista_compra_add_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="50"
                    android:text="@={viewModel.name}"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lista_compra_add_input_layout_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_view_horizontal_margin"
                android:layout_marginVertical="@dimen/titles_vertical_margin"
                android:gravity="center"
                android:hint="@string/lista_compra_add_input_layout_amount"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lista_compra_add_input_layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lista_compra_add_input_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="4"
                    android:text="@={viewModel.amount}"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lista_compra_add_input_layout_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_view_horizontal_margin"
                android:layout_marginTop="@dimen/titles_vertical_margin"
                android:gravity="center"
                android:hint="@string/lista_compra_add_input_layout_description"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lista_compra_add_input_layout_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lista_compra_add_input_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLength="100"
                    android:maxLines="3"
                    android:text="@={viewModel.description}"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/lista_compra_add_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/lista_compra_add_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/img_sin_imagen"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="@+id/lista_compra_add_input_layout_description"
                app:layout_constraintTop_toBottomOf="@+id/lista_compra_add_input_layout_description"
                app:layout_constraintWidth_percent="0.3"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lista_compra_add_capture_btn"
                style="?comprasButton_filled_round"
                android:layout_marginHorizontal="8dp"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/capture_btn"
                app:icon="@drawable/ic_camera"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toEndOf="@+id/lista_compra_add_input_layout_description"
                app:layout_constraintStart_toEndOf="@+id/lista_compra_add_image"
                app:layout_constraintTop_toTopOf="@+id/lista_compra_add_image"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lista_compra_add_save_btn"
                style="?comprasButton_filled_round"
                android:layout_marginHorizontal="@dimen/filled_button_horizontal_margin"
                android:layout_marginVertical="@dimen/filled_button_vertical_margin"
                android:enabled="@{viewModel.enableBtn}"
                android:onClick="@{()-> viewModel.create()}"
                android:text="@string/save_btn"
                app:icon="@drawable/ic_save"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toTopOf="@+id/lista_compra_add_exit_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lista_compra_add_exit_btn"
                style="?comprasButton_filled_round"
                android:layout_marginHorizontal="@dimen/filled_button_horizontal_margin"
                android:layout_marginVertical="@dimen/filled_button_vertical_margin"
                android:text="@string/exit_btn"
                app:icon="@drawable/ic_back"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.loading?View.VISIBLE:View.GONE}"
            app:layout_anchor="@+id/lottieAnimationView"
            app:layout_anchorGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="@string/login_loading_animation"
            tools:ignore="ImageContrastCheck" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>