<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="es.adrianfg.comprasfamiliares.presentation.features.login.vm.RegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_content_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{View.VISIBLE}">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/titles_vertical_margin"
            android:gravity="center"
            android:text="@string/register_title"
            android:textAppearance="@style/TextAppearance.Compras.Headline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_view_horizontal_margin"
            android:layout_marginTop="@dimen/titles_vertical_margin"
            android:gravity="center"
            android:hint="@string/register_input_layout_email_text"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/register_input_layout_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="254"
                android:text="@={viewModel.email}"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_view_horizontal_margin"
            android:layout_marginVertical="@dimen/titles_vertical_margin"
            android:hint="@string/register_input_layout_pass_text"
            app:suffixText="@string/suffix_text_password"
            app:suffixTextAppearance="?comprasBody16"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/register_input_layout_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_input_layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLength="16"
                android:text="@={viewModel.pass}"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_view_horizontal_margin"
            android:layout_marginVertical="@dimen/titles_vertical_margin"
            android:gravity="center"
            android:hint="@string/register_input_layout_name_text"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/register_input_layout_surName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_input_layout_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="100"
                android:text="@={viewModel.name}"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_surName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_view_horizontal_margin"
            android:layout_marginVertical="@dimen/titles_vertical_margin"
            android:gravity="center"
            android:hint="@string/register_input_layout_surName_text"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/register_input_layout_edad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_input_layout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_surName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="200"
                android:text="@={viewModel.surName}"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_edad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_view_horizontal_margin"
            android:layout_marginVertical="@dimen/titles_vertical_margin"
            android:gravity="center"
            android:hint="@string/register_input_layout_edad_text"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/register_save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_input_layout_surName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_edad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="3"
                android:text="@={viewModel.age}"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_save_btn"
            style="?comprasButton_filled_round"
            android:layout_marginHorizontal="@dimen/filled_button_horizontal_margin"
            android:layout_marginVertical="@dimen/filled_button_vertical_margin"
            android:enabled="@{viewModel.enableBtn}"
            android:onClick="@{()-> viewModel.register()}"
            android:text="@string/save_btn"
            app:icon="@drawable/ic_save"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@+id/register_exit_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_exit_btn"
            style="?comprasButton_filled_round"
            android:layout_marginHorizontal="@dimen/filled_button_horizontal_margin"
            android:layout_marginVertical="@dimen/filled_button_vertical_margin"
            android:text="@string/exit_btn"
            app:icon="@drawable/ic_back"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>